--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,10 @@ div.figure {
         margin-left: 280px;
         max-width: 960px;
     }
+
+    .todo, .done {
+        font-size: 80%;
+    }
 }
 
 @media print {
