--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ h5 {
     font-size: 1em;
 }
 
-h2 code, h3 code, h4 code, h5 code, td code {
+h2 code, h3 code, h4 code, h5 code {
     font-family: inherit !important;
     font-size: inherit !important;
 }
